# calheinz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
calheinz/: api.py  cli.py  ical.py  state.py
calheinz/templates/: canceled.jinja2  changed.jinja2  new.jinja2
tests/: 10-termine-2022-10-30.ics  5-termine-2022-10-30.ics  __init__.py  campus-termine-2022-10-30.ics  campus-termine-2022-10-31.ics  test_ical.py
tests/integration/fixtures/: README.md  after.ics  before.ics
